kubernetes/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: app
    spec:
      subdomain: app
      containers:
        - name: app
          image: sangmile/petclinic:0.5
          livenessProbe:
            httpGet:
              path: /manage/healthcheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 100
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /manage/healthcheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: log
              mountPath: /logs
      volumes:
        - name: log
          hostPath:
            path: /logs
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: default
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 8080
